# CodeGuard

./: .env.example  .gitignore  ACADEMIC_CODE_SNIPPETS.md  DELIVERY_SUMMARY.md  PHASE2_DELIVERY.md  QUICK_REFERENCE.md  README.md  config.py  main.py  pyproject.toml  quick-start.bat  quick-start.sh  setup.sh
analyzers/: __init__.py  python_analyzer.py
apps/api/: __init__.py
apps/api/analyzers/: base_analyzer.py  javascript_analyzer.py
apps/api/data/: codeguard.db
apps/api/database/: session.py
apps/api/models/: scan.py
apps/api/repositories/: scan_repository.py
apps/api/routes/: analysis.py
apps/api/schemas/: __init__.py  scans.py
apps/api/services/: risk_scoring.py
apps/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
data/: codeguard.db
docs/: ARCHITECTURE.md  DEPENDENCIES.md  DETECTION_RULES.md  PHASE2_SUMMARY.md  PHASE3_INTELLIGENCE.md  PROJECT_STRUCTURE.md  SETUP.md
repositories/: __init__.py
routes/: auth.py  health.py  scans.py
schemas/: analysis.py
security/: auth.py
services/: analysis_service.py  upload_validation.py
services/analytics/: __init__.py  scan_analytics.py
services/metadata/: __init__.py  cwe_mapper.py
services/persistence/: scan_store.py
services/postprocessing/: __init__.py  confidence_adjuster.py  finding_filter.py
services/remediation/: __init__.py  fix_generator.py
tests/: conftest.py  test_javascript_analyzer.py  test_phase41_auth_rbac.py  test_phase4_repository.py  test_phase5_batch_and_analytics.py  test_python_analyzer.py  test_risk_scoring.py
(+32 files in other folders)
